<resources>
    <string name="app_name">YouthVibe</string>
    <string name="menu_profile">PROFILE</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="menu_home">HOME</string>
    <string name="menu_schedule">SCHEDULE</string>
    <string name="YouthVibe_20">VIBE&#160;</string>
    <string name="txt_2020">2020</string>
    <string name="sponsors">Sponsors</string>
    <string name="team">Team</string>
    <string name="enquiry">Enquiry</string>
    <string name="accommodation">Living</string>
    <string name="campus_map">Map</string>


    <string name="register">REGISTER</string>
    <string name="login_email_hint">Email</string>
    <string name="login_password_hint">Password</string>
    <string name="signup_login_hint">Already have an account? Sign In</string>
    <string name="login_signup_hint">Don\'t have an account? Sign Up</string>
    <string name="call">CALL</string>
    <string name="issue_help_text">Got an issue? \n Contact YV Team for immediate assistance.</string>
    <string name="in_app_register">InApp Registration might contain bugs. Web registrations are bug free.</string>

    <string name="EVENTS">Events</string>
    <string name="Informals">Informals</string>
    <string name="Social_Summit">Social Summit</string>
    <string name="enq1name">Satyajit Pradhan</string>
    <string name="enq1des">App Developer</string>
    <string name="rules"><u>RULES</u></string>
    <string name="general"><u>GENERAL GUIDELINES</u></string>
    <string name="criteria"><u>JUDGING CRITERIA</u></string>
    <string name="aesthetic">Aesthetic</string>
    <string name="agastya">Agastya</string>
    <string name="coming_soon">Coming Soon!</string>
    <string name="extraPts"><u>EXTRA POINTS</u></string>
    <string name="specification"><u>BASIC SPECIFICATION AND RULES</u></string>
    <string name="design"><u>DESIGN CONSTRAINTS/SPECIFICATION</u></string>
    <string name="exit">Are you sure to exit?</string>
    <string name="noInternet">Some of the App resources are depended on Internet Connectivity to load. It is recommended to enable Internet.</string>
    <string name="new_update">A new update version is Available which brings new features and bug fixes.</string>
    <string name="menu_blogs">BLOGS</string>


</resources>
