<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    style="@style/loginCard"

    app:cardCornerRadius="@dimen/loginCardRadius"
    android:elevation="5dp"
    android:layout_gravity="center"
app:cardUseCompatPadding="true"
    android:background="@color/whiteCardColor">



    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="center"
        android:padding="@dimen/loginViewsMargin">


        <ImageView
            android:id="@+id/lv2"
            android:layout_gravity="center"
            android:layout_width="200dp"
            android:layout_height="200dp"
            android:src="@drawable/ic_login_page_icon"/>

        <TextView
            android:layout_gravity="center"
            android:gravity="center"
            android:textColor="@color/colorPrimary"
            android:fontFamily="@font/cav"
            android:layout_height="wrap_content"
            android:textSize="20sp"
            android:layout_width="match_parent"
            android:text="Login"
            android:layout_marginTop="@dimen/loginViewsMargin"/>

<!--        <androidx.cardview.widget.CardView-->
<!--            android:animateLayoutChanges="true"-->
<!--            android:layout_width="match_parent"-->
<!--            android:layout_height="wrap_content"-->
<!--            app:cardCornerRadius="10dp"-->
<!--            app:cardElevation="5dp"-->
<!--            android:layout_marginTop="@dimen/Padding_20"-->
<!--            app:cardUseCompatPadding="true">-->

            <com.google.android.material.textfield.TextInputLayout
                android:hint="@string/login_email_hint"
                android:layout_margin="4dp"
                app:errorEnabled="true"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">





            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/editTextEmail"
                style="@style/modifiedEditText"
                android:fontFamily="@font/cav"
                android:inputType="textEmailAddress"
                android:drawableEnd="@drawable/ic_email"
                android:maxLines="1"
                android:textSize="15sp" />


            </com.google.android.material.textfield.TextInputLayout>

<!--        </androidx.cardview.widget.CardView>-->




<!--            <androidx.cardview.widget.CardView-->
<!--                android:animateLayoutChanges="true"-->
<!--                android:layout_width="match_parent"-->
<!--                android:layout_height="wrap_content"-->
<!--                app:cardCornerRadius="10dp"-->
<!--                app:cardElevation="5dp"-->
<!--                android:layout_marginTop="5dp"-->
<!--                app:cardUseCompatPadding="true">-->


        <com.google.android.material.textfield.TextInputLayout
            android:layout_margin="4dp"
            android:hint="@string/login_password_hint"
            app:errorEnabled="true"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/editTextPassword"
                style="@style/modifiedEditText"
                android:fontFamily="@font/cav"
                android:maxLines="1"
                android:textSize="15sp"
                android:drawableEnd="@drawable/ic_lock"
                android:inputType="textPassword"/>


        </com.google.android.material.textfield.TextInputLayout>



        <TextView
            style="@style/viewParent"
            android:text="Forgot Password?"
            android:textColor="@color/material_red"
            android:textSize="@dimen/newsMoreTextSize"
            android:fontFamily="@font/cav"
            android:layout_gravity="end"
            android:onClick="startForgotPassword"
            android:layout_marginTop="10dp"/>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">


            <ProgressBar
                android:visibility="gone"
                android:id="@+id/progressBar"
                android:layout_gravity="center_horizontal"
                android:layout_width="wrap_content"
                android:elevation="@dimen/padding_10"
                android:layout_centerInParent="true"
                android:indeterminateTint="@color/white"
                android:layout_height="wrap_content"/>

            <Button
                android:id="@+id/cirLoginButton"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_centerInParent="true"
                android:layout_width="wrap_content"
                android:background="@drawable/btn_design_blue"
                android:text="Login"
                android:clickable="true"
                android:focusable="true"
                android:textColor="@color/white"
                android:fontFamily="@font/cav"
                android:onClick="startLoginValidation"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="@dimen/loginViewsMargin"/>

        </RelativeLayout>


        <TextView
            style="@style/parent"
            android:textAlignment="center"
            android:textStyle="bold"
            android:fontFamily="@font/cav"
            android:textColor="@color/primaryTextColor"
            android:text="@string/login_signup_hint"
            android:onClick="viewRegisterClicked"
            android:layout_marginTop="@dimen/loginViewsMargin"/>




    </LinearLayout>
</androidx.cardview.widget.CardView>
